# cdh_serialization

./: CMakeLists.txt  README.md
cdh/serialization/: deserializer.hpp  memory_pointer.hpp  nvp.hpp  processer.hpp  serialization.hpp  serializer.hpp  singleton.hpp  std_lib.hpp  std_stl.hpp  std_string.hpp  type_traits.hpp  xml_deserializer.hpp  xml_serializer.hpp
test/: CMakeLists.txt  t0.cpp  t1.cpp
